# python-packaging-pyarmeetup-2022

./: .gitignore  Dockerfile  MANIFEST.in  Packaging en Python - PyAr 2022.pptx  README.md  pyproject.toml  setup.cfg
src/pyarmeetup2020/: example.py
