[metadata]
name = pyarmeetup2020
version = 0.0.2
author = ambro17
author_email = ambro17.1@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    Flask >= 2.0.2
    elpasado == 0.0.7

[options.packages.find]
where = src